--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
+
+:root {
+  /* Color Palette */
+  --bg-dark: #0f172a;
+  --bg: #1e293b;
+  --bg-light: #f8fafc;
+
+  --text: #f8fafc;
+  --text-muted: #94a3b8;
+
+  --highlight: #3b82f6;
+  --border: #334155;
+  --border-muted: #475569;
+
+  --primary: #3b82f6;
+  --secondary: #64748b;
+
+  /* Fonts */
+  --font-body: "Inter", sans-serif;
+  --font-heading: "Merriweather", serif;
+}
+
+/* Tailwind Theming  */
+@theme {
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+
+  --color-bg: var(--bg);
+  --color-bg-dark: var(--bg-dark);
+  --color-bg-light: var(--bg-light);
+
+  --color-text: var(--text);
+  --color-text-muted: var(--text-muted);
+
+  --font-sans: var(--font-body);
+  --font-serif: var(--font-heading);
+}
