--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,4 +69,24 @@
   .form-input {
     @apply w-full px-4 py-2 ring ring-border rounded-lg focus:outline-none focus:ring-primary focus:ring-2;
   }
+
+  /* Post card*/
+  .post-card {
+    @apply bg-bg p-5 rounded-lg shadow-sm mb-6;
+  }
+  .post-header {
+    @apply flex items-center mb-2;
+  }
+  .post-header > img {
+    @apply w-10 h-10 rounded-full mr-3;
+  }
+  .post-author {
+    @apply font-semibold;
+  }
+  .post-date {
+    @apply text-sm text-gray-500;
+  }
+  .post-text {
+    @apply text-gray-800 mb-4;
+  }
 }
