--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,7 +47,15 @@
 
 @layer components {
   .primary-btn {
-    @apply w-full bg-primary text-text-white py-2 rounded-lg hover:bg-primary/90 transition;
+    @apply bg-primary text-sm text-text-white py-2 px-4 rounded-lg hover:bg-primary/90 transition;
+  }
+
+  .card {
+    @apply bg-bg p-5 rounded-lg shadow-sm mb-6;
+  }
+
+  .heading-1 {
+    @apply text-2xl font-bold mb-2;
   }
 
   /* login/register form */
@@ -71,22 +79,36 @@
   }
 
   /* Post card*/
-  .post-card {
-    @apply bg-bg p-5 rounded-lg shadow-sm mb-6;
-  }
   .post-header {
     @apply flex items-center mb-2;
   }
-  .post-header > img {
+  .post-img {
     @apply w-10 h-10 rounded-full mr-3;
   }
   .post-author {
     @apply font-semibold;
   }
   .post-date {
-    @apply text-sm text-gray-500;
+    @apply text-sm text-text-muted;
   }
   .post-text {
-    @apply text-gray-800 mb-4;
+    @apply text-text-muted mb-4;
+  }
+
+  /* Profile Card*/
+  .user-header {
+    @apply flex items-center gap-4 mb-2;
+  }
+  .user-header > img {
+    @apply w-30 h-30 rounded-full;
+  }
+  .profile-name {
+    @apply text-3xl font-bold text-text;
+  }
+  .profile-bio {
+    @apply text-text-muted;
+  }
+  .profile-email {
+    @apply text-sm text-text-muted;
   }
 }
